Fix layout of boxes on paintings/new

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -194,7 +194,7 @@ table tr.evenrow {
   padding-left: 50px;
   border-radius:25px;
   -moz-border-radius: 25px;
-  margin-left: -10px;
+  margin-left: -5px;
 }
 
 .form-container {
@@ -206,7 +206,7 @@ table tr.evenrow {
   padding-left: 60px;
   padding-top: 50px;
   margin-top: -45px;
-  margin-left: -10px;
+  margin-left: -26px;
   label {color: grey;}
 }
 
@@ -240,6 +240,7 @@ table tr.evenrow {
   width: 860px;
   margin-left: 150px;
   margin-bottom: 10px;
+  margin-top: 20px;
 
   
 }
